[tool.poetry]
name = "m1-ds-stack-poetry"
version = "0.1.0"
description = ""
authors = ["andrew martin <agmartin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
scipy = "^1.11.3"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
torch = "^2.1.0"
torchvision = "^0.16.0"
torchaudio = "^2.1.0"
torchtext = "^0.16.0"
ortools = "^9.7.2996"
xgboost = "^2.0.1"


[tool.poetry.group.dev.dependencies]
bpython = "^0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
